[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Modules/HUD File/Mode HUD File/ModeHUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.27451, 0.27451, 0.27451, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.537255, 0.537255, 0.537255, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.537255, 0.537255, 0.537255, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.27451, 0.27451, 0.27451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.537255, 0.537255, 0.537255, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.27451, 0.27451, 0.27451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="ModeHUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -195.0
margin_top = 10.0
margin_right = -10.0
rect_min_size = Vector2( 175, 0 )
custom_constants/separation = 20

[node name="DodgeState" type="Button" parent="VBoxContainer"]
margin_right = 185.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.27451, 0.27451, 0.27451, 1 )
custom_colors/font_color_hover = Color( 0.537255, 0.537255, 0.537255, 1 )
custom_colors/font_color_pressed = Color( 0.27451, 0.27451, 0.27451, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Dodge"

[node name="ShootState" type="Button" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 185.0
margin_bottom = 138.0
custom_colors/font_color = Color( 0.27451, 0.27451, 0.27451, 1 )
custom_colors/font_color_hover = Color( 0.537255, 0.537255, 0.537255, 1 )
custom_colors/font_color_pressed = Color( 0.27451, 0.27451, 0.27451, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Shoot"

[connection signal="pressed" from="VBoxContainer/DodgeState" to="." method="_on_DodgeState_pressed"]
[connection signal="pressed" from="VBoxContainer/ShootState" to="." method="_on_ShootState_pressed"]
